--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "react-dom": "^18.3.1",
     "react-scripts": "^4.0.3",
     "web-vitals": "^2.1.4"
-  },"scripts": {
-  "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-  "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
-  "test": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts test"
-}, "eslintConfig": {
+  },
+  "scripts": {
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    "test": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts test"
+  },
+  "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
@@ -31,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
